unpackaged/main/default/objects/Strategy__c/Strategy__c.object-meta.xml
<CustomObject>
    <label>Strategy</label>
    <nameField>
        <label>Strategy Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Strategies</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>