unpackaged/main/default/objects/Strategy__c/fields/Bond_Ladder__c.field-meta.xml
<CustomField>
    <fullName>Bond_Ladder__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Bond Ladder?</label>
    <type>Checkbox</type>
</CustomField>