unpackaged/main/default/objects/Strategy__c/fields/Interval_Fund__c.field-meta.xml
<CustomField>
    <fullName>Interval_Fund__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Interval Fund?</label>
    <type>Checkbox</type>
</CustomField>