unpackaged/main/default/objects/Strategy__c/fields/Short_Term_Cash_Management__c.field-meta.xml
<CustomField>
    <fullName>Short_Term_Cash_Management__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Short Term Cash Management?</label>
    <type>Checkbox</type>
</CustomField>