unpackaged/main/default/objects/Strategy__c/fields/Sleeve_Classification__c.field-meta.xml
<CustomField>
    <fullName>Sleeve_Classification__c</fullName>
    <description>What kind of sleeve this strategy is. Drives how the Order Ticket wizard lets advisors fund it: each classification maps to an Allowed Funding Basis (Dollar Only / Percent Only / Either) in the Sleeve Basis Rule custom metadata, and the wizard offers the strategy only in the matching list. Fixed-dollar families (structured notes, alternatives, interval funds) are bought as set amounts and must not drift as the account grows. Blank falls back to the Default rule (Percent Only), which is how every strategy behaved before this field existed.</description>
    <inlineHelpText>What kind of sleeve this is. Determines whether advisors fund it as a fixed dollar amount, a percentage, or either — see the Sleeve Basis Rule metadata.</inlineHelpText>
    <label>Sleeve Classification</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Model Allocation</fullName>
            </value>
            <value>
                <fullName>Model Exclusion</fullName>
            </value>
            <value>
                <fullName>Billing Exclusion</fullName>
            </value>
            <value>
                <fullName>Fee-Based Alternative</fullName>
            </value>
            <value>
                <fullName>Broker Dealer Alternative</fullName>
            </value>
            <value>
                <fullName>Structured Note</fullName>
            </value>
            <value>
                <fullName>Interval Fund</fullName>
            </value>
            <value>
                <fullName>Bond Ladder</fullName>
            </value>
            <value>
                <fullName>Cash / Money Market</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>