unpackaged/main/default/objects/Strategy__c/fields/Strategy_Code__c.field-meta.xml
<CustomField>
    <fullName>Strategy_Code__c</fullName>
    <label>Strategy Code</label>
    <length>10</length>
    <type>Text</type>
</CustomField>