unpackaged/main/default/objects/Strategy__c/fields/Strategy_Cost__c.field-meta.xml
<CustomField>
    <fullName>Strategy_Cost__c</fullName>
    <label>Strategy Cost</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>