unpackaged/main/default/objects/Strategy__c/fields/Structured_Note__c.field-meta.xml
<CustomField>
    <fullName>Structured_Note__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Structured Note?</label>
    <type>Checkbox</type>
</CustomField>