unpackaged/main/default/objects/Strategy__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Strategy_Code__c</columns>
    <columns>Status__c</columns>
    <columns>LAST_UPDATE</columns>
    <columns>Strategy_Cost__c</columns>
    <columns>Short_Term_Cash_Management__c</columns>
    <columns>Interval_Fund__c</columns>
    <columns>Bond_Ladder__c</columns>
    <columns>Structured_Note__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>